crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__counter_with_unsigned_field.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl ::observed::Event for BytesReceived {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "bytes.received",
            ::core::option::Option::Some(::core::any::TypeId::of::<BytesReceived>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "bytes",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "bytes",
                            ::observed::metadata::MetricDescription::new(
                                "bytes.received.total",
                                ::observed::metadata::InstrumentKind::Counter,
                                "",
                                "By",
                            ),
                        ),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.bytes.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
