crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__dimension_metric_keeps_default_log.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: output
---
const _: () = {
    impl ::observed::Event for CountEvent {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "http.request.count",
            ::core::option::Option::Some(::core::any::TypeId::of::<CountEvent>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "http.request.count",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::Some(
                ::observed::metadata::MetricDescription::new(
                    "http.request.count",
                    ::observed::metadata::InstrumentKind::Counter,
                    "",
                    "",
                ),
            ),
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "region",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("region"),
                    ),
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::dimension("region"),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.region.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
