crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__error_message_references_excluded_field.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: err
---
log message references `{tag}` but no log attribute with that name exists; available attributes: []
