crates/observed_macros_impl/src/event/snapshots/observed_macros_impl__event__tests__error_message_references_field_name_not_attr_name.snap
---
source: crates/observed_macros_impl/src/event/tests.rs
expression: err
---
log message references `{my_field}` but no log attribute with that name exists; available attributes: [custom_name]
